[package]
name = "easy-db-derive"
version = "0.1.0"
authors = ["yang <guangyue.yang@tongdun.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0.17"
quote = "1.0.3"
proc-macro2 = "1.0.10"
mysql = "*"
